--- a/操作系统赛/config/default.yaml
+++ b/操作系统赛/config/default.yaml
@@ -50,6 +50,9 @@ detectors:
       - "task blocked"
       - "soft lockup"
       - "hard lockup"
+      - "blocked for more than 120 seconds"
+      - "task hung"
+
       
   fs_exception:
     enabled: true
